# anymlops

./: README.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  general-issue.yml
.github/workflows/: infracost.yml  kubernetes_test.yaml  release.yaml  test-provider.yaml  test.yaml
anymlops/: _version.py  cost.py  deploy.py  destroy.py  initialize.py  render.py  schema.py  upgrade.py  utils.py
anymlops/cli/: dev.py  init.py  keycloak.py  main.py
anymlops/provider/: git.py  terraform.py
anymlops/provider/cicd/: common.py  github.py  gitlab.py  linter.py
anymlops/provider/cloud/: amazon_web_services.py  azure_cloud.py  commons.py  digital_ocean.py  google_cloud.py
anymlops/provider/oauth/: auth0.py
anymlops/stages/: checks.py  input_vars.py  tf_objects.py
anymlops/template/stages/01-terraform-state/aws/: main.tf
anymlops/template/stages/01-terraform-state/azure/: main.tf
anymlops/template/stages/01-terraform-state/do/: main.tf
anymlops/template/stages/01-terraform-state/gcp/: main.tf
anymlops/template/stages/02-infrastructure/aws/: outputs.tf  variables.tf
anymlops/template/stages/02-infrastructure/azure/: outputs.tf  variables.tf
anymlops/template/stages/02-infrastructure/do/: main.tf  variables.tf
anymlops/template/stages/02-infrastructure/existing/: main.tf
anymlops/template/stages/02-infrastructure/gcp/: outputs.tf  variables.tf
anymlops/template/stages/02-infrastructure/local/: outputs.tf
anymlops/template/stages/03-kubernetes-initialize/: variables.tf
anymlops/template/stages/04-kubernetes-ingress/: variables.tf
anymlops/template/stages/05-kubernetes-keycloak/: main.tf  outputs.tf  variables.tf
anymlops/template/stages/06-kubernetes-keycloak-configuration/: outputs.tf  variables.tf
anymlops/template/stages/07-kubernetes-services/: conda-store.tf  variables.tf
anymlops/template/stages/08-anymlops-tf-extensions/: nebari-config.tf  tf-extensions.tf  variables.tf
anymlops/template/stages/08-anymlops-tf-extensions/modules/anymlopsextension/: main.tf  variables.tf
anymlops/template/stages/08-anymlops-tf-extensions/modules/nebariextension/: ingress.tf  keycloak-config.tf
docs/: conf.py
docs/_templates/: announcement.html
scripts/: aws-force-destroy.py  aws-force-destroy.sh  keycloak-export.py
(+30 files in other folders)
