### Build ###
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["anymlops"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "anymlops/_version.py"
local_scheme = "node-and-timestamp"


### Project ###
[project]
name = "anymlops"
dynamic = ["version"]
description = "A data science platform that works."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Beartell team", email = "bcakir@beartell.com" },
]
keywords = [
    "aws",
    "gcp",
    "do",
    "azure",
    "anymlops",
    "dask",
    "jupyter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Framework :: Jupyter :: JupyterLab",
]

dependencies = [
    "auth0-python==4.0.0",
    "azure-identity==1.6.1",
    "azure-mgmt-containerservice==16.2.0",
    "bcrypt==4.0.1",
    "boto3==1.26.54",
    "cloudflare==2.11.1",
    "kubernetes==25.3.0",
    "pydantic==1.10.4",
    "pynacl==1.5.0",
    "python-keycloak==2.9.0",
    "questionary==1.10.0",
    "rich==13.2.0",
    "ruamel.yaml==0.17.21",
    "typer==0.7.0",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "dask-gateway",
    "diagrams",
    "escapism",
    "flake8==3.8.4",
    "importlib-metadata<5.0",
    "jhub-client",
    "paramiko",
    "pre-commit",
    "pytest",
    "pytest-timeout",
]

[project.urls]
Documentation = "https://www.beartell.com"
Source = "https://github.com/beartell/anymlops"

[project.scripts]
anymlops = "anymlops.cli.main:app"

[tool.ruff]
ignore = [
    "E501", # Line too long
    "F821", # Undefined name
]
extend-exclude = [
    "anymlops/template",
    "docs/source/conf.py",
    "docs",
    "home",
    "__pycache__"
]
